src/objects/QA_Patient_Review__c.object
<CustomObject>
    <fields>
        <fullName>Patient_Possible_Points__c</fullName>
        <formula>IF(TEXT(Level__c) = &apos;Comprehensive&apos;, 121, IF(TEXT(Level__c) = &apos;Intermediate&apos;, 105, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Possible Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Review_Status__c</fullName>
        <label>Patient Review Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Score__c</fullName>
        <formula>Patient_Total_Points__c / Patient_Possible_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patient_Total_Points__c</fullName>
        <formula>IF(ISPICKVAL(Case_Hx_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Subj_Rx_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Corr_VA_Perf__c, &apos;Yes&apos;),2, 0) +
IF(OR(ISPICKVAL(Binoc_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Binoc_Perf__c, &apos;N/A&apos;))),2, 0) +
IF(OR(ISPICKVAL(Binoc_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Binoc_Doc__c, &apos;N/A&apos;))),2, 0) +
IF(ISPICKVAL(Ext_Bio_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ext_Bio_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ophthal_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Ophthal_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Diagnosis_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Diagnosis_Doc__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Treatment_Perf__c, &apos;Yes&apos;),2, 0) +
IF(ISPICKVAL(Exam_according_to_VSP_guidelines__c, &apos;Yes&apos;),25, 0) +
IF(ISPICKVAL(Past_medical_history_noted__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Current_illnesses_and_medical_conditions__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Current_medications_noted__c, &apos;Yes&apos;),4, 0) +
IF(ISPICKVAL(Current_medication_allergies_noted__c, &apos;Yes&apos;),4, 0) +
IF(ISPICKVAL(Diagnoses_consistent_with_exam__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Treatment_consistent_with_diagnosis__c, &apos;Yes&apos;),5, 0) +
IF(ISPICKVAL(Follow_up_care_noted__c, &apos;Yes&apos;),0.5, 0) +
IF(ISPICKVAL(Chart_notes_rendering_doctor_by_initials__c, &apos;Yes&apos;),0.5, 0) +
IF(OR(ISPICKVAL(Were_appropriate_procedures_performed__c, &apos;Yes&apos;),(ISPICKVAL(Were_appropriate_procedures_performed__c, &apos;N/A&apos;))),11, 0) +
IF(OR(ISPICKVAL(Were_procedures_performed_contact_lens__c, &apos;Yes&apos;),(ISPICKVAL(Were_procedures_performed_contact_lens__c, &apos;N/A&apos;))),10, 0) +

IF(ISPICKVAL(Level__c, &apos;Comprehensive&apos;),
			IF(ISPICKVAL(Enter_VA_Perf__c, &apos;Yes&apos;),2, 0) +
			IF(ISPICKVAL(Pupil_Ref_Perf__c, &apos;Yes&apos;),2, 0) +
			IF(ISPICKVAL(Pupil_Ref_Doc__c, &apos;Yes&apos;),2, 0) +
			IF(ISPICKVAL(Versions_Perf__c, &apos;Yes&apos;),2, 0) +
			IF(ISPICKVAL(Versions_Doc__c, &apos;Yes&apos;),2, 0) +
			IF(OR(ISPICKVAL(Tonometry_19_over_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Tonometry_19_over_Perf__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(Tonometry_19_over_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Tonometry_19_over_Doc__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(GV_Fields_Perf__c, &apos;Yes&apos;),(ISPICKVAL(GV_Fields_Perf__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(GV_Fields_Doc__c, &apos;Yes&apos;),(ISPICKVAL(GV_Fields_Doc__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(Dilation_Diabetic_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Diabetic_Perf__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(Dilation_Diabetic_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Diabetic_Doc__c, &apos;N/A&apos;))),2, 0),
			0) +

IF(ISPICKVAL(Level__c, &apos;Intermediate&apos;),
			IF(OR(ISPICKVAL(Dilation_Perf__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Perf__c, &apos;N/A&apos;))),2, 0) +
			IF(OR(ISPICKVAL(Dilation_Doc__c, &apos;Yes&apos;),(ISPICKVAL(Dilation_Doc__c, &apos;N/A&apos;))),2, 0) +
			IF(ISPICKVAL(Treatment_Doc__c, &apos;Yes&apos;),2, 0),
			0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Total Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_to_return_within_12_months__c</fullName>
        <label>Patient to return within 12 months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That is not a valid Program ID. Use the lookup feature to locate the correct value.</errorMessage>
            <filterItems>
                <field>General_Table__c.Table__c</field>
                <operation>equals</operation>
                <value>PRSP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Table__c</referenceTo>
        <relationshipLabel>QA Patient Reviews</relationshipLabel>
        <relationshipName>QA_Patient_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pt_preferred_language_documented__c</fullName>
        <label>Pt preferred language documented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_refused_interpreter__c</fullName>
        <label>Pt refused interpreter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pt_requested_interpreter__c</fullName>
        <label>Pt requested interpreter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil_Ref_Doc__c</fullName>
        <label>Pupil Ref Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil_Ref_Perf__c</fullName>
        <label>Pupil Ref Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Review_Number__c</fullName>
        <label>QA Review Number</label>
        <referenceTo>QA_Review__c</referenceTo>
        <relationshipLabel>QA Patient List</relationshipLabel>
        <relationshipName>QA_Patient_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Glaucoma_Meds__c</fullName>
        <label>Reason for No Glaucoma Meds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient under care of ophthalmologist or glaucoma specialist</fullName>
                </value>
                <value>
                    <fullName>Patient referred to ophthalmologist or glaucoma specialist</fullName>
                </value>
                <value>
                    <fullName>Further testing ordered, and results not obtained at time of this exam</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Health_Plan_Specialist__c</fullName>
        <label>Referred to Health Plan Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refitting_3_Fields_Perf__c</fullName>
        <label>Refitting (3 Fields) Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Member__c</fullName>
        <label>Relationship to Member</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Handicap Dependent</fullName>
                </value>
                <value>
                    <fullName>Dependent Parent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacement_N_A_Perf__c</fullName>
        <label>Replacement -N/A Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Subj_Obj_Perf__c</fullName>
        <label>Response Subj. Obj. Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retinal_Imaging_Type__c</fullName>
        <label>If 3 is No, If applicable select:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retinal Imaging</fullName>
                </value>
                <value>
                    <fullName>OptoMap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Auditor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slit_Lamp_Evaluation_w_CL_Perf__c</fullName>
        <label>Slit Lamp Evaluation w/CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slit_Lamp_Evaluation_w_o_CL_Perf__c</fullName>
        <label>Slit Lamp Evaluation w/o CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subj_Rx_Perf__c</fullName>
        <label>Subj. Rx Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonometry_19_over_Doc__c</fullName>
        <label>Tonometry 19 yrs &amp; Over Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonometry_19_over_Perf__c</fullName>
        <label>Tonometry 19 yrs &amp; Over Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Doc__c</fullName>
        <label>Treatment Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Perf__c</fullName>
        <label>Treatment Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_consistent_with_diagnosis__c</fullName>
        <label>Treatment consistent with diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Care_of_Specialist__c</fullName>
        <label>Under Care of Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_w_CL_Perf__c</fullName>
        <label>VA w/CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_w_o_CL_Perf__c</fullName>
        <label>VA w/o CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Versions_Doc__c</fullName>
        <label>Versions Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Versions_Perf__c</fullName>
        <label>Versions Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visual_Field_Progression_Stabilized__c</fullName>
        <label>Visual Field Progression Stabilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_Consultation_Documented__c</fullName>
        <label>Was a Consultation Documented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_appropriate_procedures_performed__c</fullName>
        <label>Were appropriate procedures performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_procedures_performed_contact_lens__c</fullName>
        <label>Were procedures performed contact lens</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_Communication_Rationale__c</fullName>
        <label>What is Communication Rationale?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient under care of Ophthalmogist</fullName>
                </value>
                <value>
                    <fullName>PCP is an institution (Kaiser)</fullName>
                </value>
                <value>
                    <fullName>Letter previously sent within LTM</fullName>
                </value>
                <value>
                    <fullName>Patient did not provide PCP</fullName>
                </value>
                <value>
                    <fullName>Patient declined to have letter sent</fullName>
                </value>
                <value>
                    <fullName>Part of medical record</fullName>
                </value>
                <value>
                    <fullName>PCP orders requesting exam are included</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Patient Review</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>QA Patient Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Patient Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>